postiz/service-postiz-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: postiz-api
  namespace: postiz
spec:
  internalTrafficPolicy: Local
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: postiz
  sessionAffinity: None
  type: ClusterIP
