postiz/ingressroute-postiz.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postiz.${dns_domain}
  namespace: postiz
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`postiz.${dns_domain}`)
      kind: Rule
      services:
        - name: postiz
          kind: Service
          port: 5000
    - match: Host(`postiz.${dns_domain}`) && PathPrefix(`/api/`)
      kind: Rule
      services:
        - name: postiz-api
          kind: Service
          port: 3000
      middlewares:
      - name: stripprefix-api
        namespace: traefik
